refactor: update cors configuration to use value from application.properties